# QtLearning

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
Widgets/Base64ConverUI/: Base64Conver.cpp  Base64Conver.h  Base64ConverUI.cpp  Base64ConverUI.h  CMakeLists.txt  main.cpp
Widgets/Letter/: CMakeLists.txt  Info.aps  Info.rc  Letter.psd  main.cpp  window.cpp  window.h
Widgets/PerformanceDetector/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
Widgets/calculator/: CMakeLists.txt  calculator.cpp  calculator.h  main.cpp
Widgets/watermark/: CMakeLists.txt
Widgets/watermark/src/: main.cpp  mainWindow.cpp  mainWindow.h  sysTray.cpp  sysTray.h  watermark.cpp  watermark.h
